exam2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yoni-service
spec:
  type: NodePort
  selector:
    app: yoni
  ports:
    - name: http
      port: 8080
      targetPort: 8080
